k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bdc-production
  labels:
    name: bdc-production
    environment: production
